2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gconf/gconf.c: (gst_gconf_render_bin_with_default):
	Use and unset the GError when pipeline creation fails instead of
	simply leaking it. Fixes bug #515704.

2008-02-10  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/audiofx/audioamplify.c:
	* gst/audiofx/audiochebband.c:
	* gst/audiofx/audiocheblimit.c:
	* gst/audiofx/audiodynamic.c:
	* gst/audiofx/audioinvert.c:
	* gst/audiofx/audiopanorama.c:
	* gst/audiofx/audiowsincband.c:
	* gst/audiofx/audiowsinclimit.c:
	Fix long description of audiofx elements. Fixes bug #515457.

2008-02-09  Jan Schmidt  <jan.schmidt@sun.com>

	* docs/plugins/Makefile.am:
	* gst/spectrum/gstspectrum.c:
	* tests/examples/spectrum/.cvsignore:
	* tests/examples/spectrum/Makefile.am:
	* tests/examples/spectrum/spectrum-example.c:

	Add a simple example application for the spectrum element, include it
	in the docs, and fix some documentation ambiguities.

	Fixes: #348085

2008-02-08  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/equalizer/Makefile.am:
	* gst/spectrum/Makefile.am:
	Fix includes order

	* tests/check/Makefile.am:
	Exclude v4l2src from the states test - it takes too long to start.

	* tests/check/elements/spectrum.c:
	Make the test run properly with CK_FORK=no

2008-02-08 Christian Schaller <christian.schaller@collabora.co.uk>

	* gst/audiofix/Makefile.am: add missing header files 

2008-02-08  Julien Moutte  <julien@fluendo.com>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_parse_blockgroup_or_simpleblock): Flag
	keyframe and delta units correctly when dealign with a BlockGroup.
	Fixes: #514397

2008-02-08  Jan Schmidt  <jan.schmidt@sun.com>

	* tests/check/elements/.cvsignore:
	Spell the new tests correctly in .cvsignore

2008-02-08  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/multifile/gstmultifilesrc.c: (gst_multi_file_src_create):
	  Need to use gsize here for the size, fixes compiler warning.

	* tests/examples/equalizer/.cvsignore: